@@ -1,5 +1,10 @@
 2005-10-31  Sam Steingold  <sds@gnu.org>
 
+	* spvw_debug.d (nobject_out1): handle Foreign-Address only when
+	DYNAMIC_FFI is defined
+
+2005-10-31  Sam Steingold  <sds@gnu.org>
+
 	* spvw.d (main_actions): when argv_execute_file=="-", use the
 	value of *STANDARD-INPUT*, not the symbol itself (bug 1344222)
 
